demo_app/03_python_mgo/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
