demo_app/03_python_mgo/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-app-service
          servicePort: 5000
